# Django-backend

./: .gitignore  README.MD  TODO.MD  manage.py  pyproject.toml
auth_app/: .env-template  admin.py  basic_auth.py  config.py  crud.py  manage.py  models.py  pyproject.toml  security.py  serializers.py  urls.py
auth_app/api/core/: helpers.py  mixins.py
auth_app/api/v1/: basic_auth.py  cookies.py  crud.py  debug.py  jwt_auth.py  oauth.py  serializers.py  urls.py
auth_app/auth_app_project/: asgi.py  settings.py  urls.py
auth_app/crud/: session_crud.py  tokens_crud.py  user_crud.py
auth_app/migrations/: 0001_initial.py  0002_authuser_last_login.py
auth_app/models/: __init__.py  models.py
auth_app/services/: db_helper.py  security.py
auth_app_project/: asgi.py  settings.py  wsgi.py
config/: settings.py  urls.py
my_django_project/: asgi.py  settings.py  urls.py  wsgi.py
user_app/: .env-template  config.py  crud.py  pyproject.toml
user_app/api/v1/: users.py
user_app/models/: __init__.py  models.py
user_app/user_app_project/: settings.py  urls.py
