[project]
name = "microservices-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "redis[async] (>=5.2.1,<6.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
