[project]
name = "microservices-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "redis[async] (>=5.2.1,<6.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (==2.9.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
